--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "node-sass": "6.0.1",
-    "prettier": "2.3.2"
+    "node-sass": "6.0.1"
   }
 }
