--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "node-sass": "6.0.1"
+    "node-sass": "6.0.1",
+    "react-error-overlay": "^6.0.9"
   }
 }
