--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "@elrondnetwork/dapp-core": "1.0.0",
     "@elrondnetwork/dapp-utils": "0.1.3",
     "@elrondnetwork/erdjs": "9.0.3",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "axios": "0.21.1",
     "bootstrap": "4.6.0",
     "moment": "2.29.1",
     "react": "17.0.2",
     "react-bootstrap": "2.1.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-indiana-drag-scroll": "^2.1.0",
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
+    "react-scroll-to-top": "^1.0.8",
     "typescript": "4.1.2",
     "web-vitals": "1.0.1"
   },
