--- a/package.json
+++ b/package.json
@@ -26,16 +26,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-testnet": "npm run copy-testnet-config & npm run start",
-    "start-devnet": "npm run copy-devnet-config & npm run start",
-    "build": "react-scripts build",
-    "build-testnet": "npm run copy-testnet-config & npm run build",
-    "build-devnet": "npm run copy-devnet-config & npm run build",
+    "build": "react-scripts build --stats",
     "test": "react-scripts test",
-    "copy-testnet-config": "cp ./src/config.testnet.tsx ./src/config.tsx",
-    "copy-devnet-config": "cp ./src/config.devnet.tsx ./src/config.tsx",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext js,ts,tsx src"
+    "lint": "eslint --ext js,ts,tsx src",
+    "report": "webpack-bundle-analyzer build/bundle-stats.json"
   },
   "eslintConfig": {
     "extends": [
@@ -79,6 +74,7 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "node-sass": "6.0.1",
-    "react-error-overlay": "^6.0.9"
+    "react-error-overlay": "^6.0.9",
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
