--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "editor.codeActionsOnSave": {
         // "source.organizeImports": true,
         "source.fixAll.eslint": true
+    },
+    "workbench.colorCustomizations": {
+        "statusBar.background": "#ad47bb"
     }
 }
