--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "GPL-3.0-or-later",
   "repository": "@elrondnetwork/dapp-template",
   "dependencies": {
-    "@elrondnetwork/dapp-core": "^1.0.0",
+    "@elrondnetwork/dapp-core": "^1.1.5",
     "@elrondnetwork/dapp-utils": "0.1.3",
-    "@elrondnetwork/erdjs": "9.0.3",
+    "@elrondnetwork/erdjs": "^9.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "axios": "0.21.1",
     "bootstrap": "4.6.0",
