--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "axios": "0.21.1",
     "bootstrap": "4.6.0",
+    "dotenv": "^16.0.0",
     "moment": "2.29.1",
     "react": "17.0.2",
     "react-bootstrap": "2.1.2",
