--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "4.0.3",
     "react-scroll-to-top": "^1.0.8",
     "typescript": "4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "1.0.1"
   },
   "scripts": {
@@ -63,6 +64,7 @@
     "@types/react": "17.0.7",
     "@types/react-dom": "17.0.0",
     "@types/react-router-dom": "5.1.7",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "4.22.1",
     "@typescript-eslint/parser": "4.22.1",
     "eslint-config-prettier": "8.3.0",
