--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "4.6.0",
     "dotenv": "^16.0.0",
     "moment": "2.29.1",
+    "object-hash": "^3.0.0",
     "react": "17.0.2",
     "react-bootstrap": "2.1.2",
     "react-dom": "17.0.2",
@@ -61,6 +62,7 @@
     "@testing-library/user-event": "13.5.0",
     "@types/jest": "26.0.15",
     "@types/node": "12.0.0",
+    "@types/object-hash": "^2.2.1",
     "@types/react": "17.0.7",
     "@types/react-dom": "17.0.0",
     "@types/react-router-dom": "5.1.7",
