--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
     "react-scroll-to-top": "^1.0.8",
+    "to-hex": "^0.0.18",
     "typescript": "4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "1.0.1"
