--- a/.eslintrc
+++ b/.eslintrc
@@ -80,6 +80,7 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "react/jsx-one-expression-per-line": "off",
+    "@typescript-eslint/no-empty-function": "off",
     "react/prop-types": "off",
     "react/display-name": "off",
     "linebreak-style": [
