FIX anchor link to #penguinNest wasn't working

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.3.1",
     "react-indiana-drag-scroll": "^2.1.0",
     "react-router-dom": "6.2.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-scroll-to-top": "^1.0.8",
     "to-hex": "^0.0.18",
@@ -67,6 +68,7 @@
     "@types/react": "17.0.7",
     "@types/react-dom": "17.0.0",
     "@types/react-router-dom": "5.1.7",
+    "@types/react-router-hash-link": "^2.4.5",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "4.22.1",
     "@typescript-eslint/parser": "4.22.1",
