--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/object-hash": "^2.2.1",
     "@types/react": "17.0.7",
     "@types/react-dom": "17.0.0",
+    "@types/react-native": "^0.67.6",
     "@types/react-router-dom": "5.1.7",
     "@types/react-router-hash-link": "^2.4.5",
     "@types/uuid": "^8.3.4",
