--- a/package.json
+++ b/package.json
@@ -1,42 +1,48 @@
 {
-  "name": "@elrondnetwork/dapp-template",
-  "description": "Elrond Dapp Template",
-  "version": "0.2.0",
-  "author": "ElrondNetwork",
+  "name": "@apcolony/apcolony.com",
+  "description": "",
+  "version": "1.0.0",
+  "author": "Angry Penguins Colony",
   "license": "GPL-3.0-or-later",
-  "repository": "@elrondnetwork/dapp-template",
   "dependencies": {
-    "@elrondnetwork/dapp-core": "^1.1.5",
-    "@elrondnetwork/dapp-utils": "0.1.3",
-    "@elrondnetwork/erdjs": "^9.2.1",
+    "@elrondnetwork/erdjs": "^10.2.5",
+    "@elrondnetwork/erdjs-network-providers": "^0.1.5",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@multiversx/sdk-dapp": "^2.10.1",
     "axios": "0.21.1",
     "bootstrap": "4.6.0",
-    "dotenv": "^16.0.0",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
     "moment": "2.29.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "object-hash": "^3.0.0",
-    "react": "17.0.2",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "react": "^18.2.0",
     "react-bootstrap": "2.1.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
-    "react-indiana-drag-scroll": "^2.1.0",
+    "react-indiana-drag-scroll": "^2.2.0",
     "react-router-dom": "6.2.1",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-scroll-to-top": "^1.0.8",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "to-hex": "^0.0.18",
     "typescript": "4.1.2",
+    "url": "^0.11.0",
     "uuid": "^8.3.2",
     "web-vitals": "1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build --stats",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "set GENERATE_SOURCEMAP=false react-app-rewired build --stats",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "lint": "eslint --ext js,ts,tsx src",
     "report": "webpack-bundle-analyzer build/bundle-stats.json"
   },
@@ -65,8 +71,8 @@
     "@types/jest": "26.0.15",
     "@types/node": "12.0.0",
     "@types/object-hash": "^2.2.1",
-    "@types/react": "17.0.7",
-    "@types/react-dom": "17.0.0",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
     "@types/react-native": "^0.67.6",
     "@types/react-router-dom": "5.1.7",
     "@types/react-router-hash-link": "^2.4.5",
@@ -86,7 +92,11 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "node-sass": "6.0.1",
+    "react-app-rewired": "^2.2.1",
     "react-error-overlay": "^6.0.9",
     "webpack-bundle-analyzer": "^4.5.0"
+  },
+  "browser": {
+    "fs": false
   }
 }
