--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "uuid": "^8.3.2",
     "web-vitals": "1.0.1"
   },
+  "engines": {
+    "node": "~16.13.1"
+  },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build --stats",
